feat: add mobile client support and make backend configurable by client type